--- a/temples.html
+++ b/temples.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="styles/temples-large.css">
 
     <!-- JavaScript -->
-    <script src="scripts/temples.js" defer></script>
+    <script src="js/temples.js" defer></script>
 </head>
 
 <body>
@@ -82,5 +82,6 @@
         <p>Last Modified: <span id="lastModified"></span></p>
     </footer>
 </body>
+
 
 </html>
