--- a/review.html
+++ b/review.html
@@ -10,6 +10,7 @@
     <title>Review Submitted</title>
 
     <link rel="stylesheet" href="styles/form.css">
+     <script src="js/review.js" defer ></script>
 </head>
 
 <body>
@@ -27,7 +28,7 @@
         </p>
     </footer>
 
-    <script src="js/review.js"></script>
 </body>
+
 
 </html>
